# etl-cli

./: .env.dev  .env.test  .gitignore  .readthedocs.yml  README.md  mypy.ini  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  main.yml
config/: .etlrc.dev.yml  .etlrc.test.yml  .etlrc.yml
config/templates/pershing/: capt.yml
doc/sphinx/source/: conf.py  index.rst
src/cli/: __init__.py  app.py  cli.py  command.py  main.py
src/etl/: __init__.py  config.py  pipeline.py
src/etl/cli/: __init__.py  app.py  main.py
src/etl/config/: app.py  auth_type.py  database.py  yaml.py
src/etl/std/: error.py  exceptions.py  result.py
src/std/: __init__.py  exceptions.py  result.py
tests/unit/std/: error_test.py  result_test.py
